# clam

./: .gitignore  Cargo.toml  docker-compose.yml
core/: Cargo.toml  test_api.rs
core/src/: lib.rs  persistent_calc.rs
core/tests/: db_integration.rs  preference_integration.rs
server/: Cargo.toml
server/src/: main.rs
tests/: db_integration.rs
