[package]
name = "clam-core"
version = "0.0.1"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
thiserror = "2.0.18"
sqlx = { version = "0.8.3", features = ["runtime-tokio", "postgres", "uuid", "macros"] }
tokio = { version = "1.43", features = ["full"] }
uuid = { version = "1.13.1", features = ["v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json", "blocking"] }
csv = "1.3"
embed_anything = { version = "0.6.7", features = ["ort"] }
candle-core = "=0.9.1"




