[package]
name = "clam-core"
version = "0.0.2"
edition = "2024"

[dependencies]
# Error handling
anyhow = "1.0.102"

# Database storage (Persistence)
sqlx = { version = "0.8.3", features = ["runtime-tokio", "sqlite", "macros", "chrono"] }

# Async runtime - trimmed to minimum for library
tokio = { version = "1.43", features = ["rt", "macros"] }

# Serialization
serde = "1.0"
serde_json = "1.0"

# Time handling
chrono = { version = "0.4.39", features = ["serde"] }

# Machine Learning
model2vec-rs = { git = "https://github.com/MinishLab/model2vec-rs", version = "0.1.4", features = ["local-only"] }

[dev-dependencies]
# Data processing for tests
csv = "1.3"
reqwest = { version = "0.13", features = ["json"] }

# Test utilities
uuid = { version = "1.13.1", features = ["v4"] }

# Enable extra features for integration tests
sqlx = { version = "0.8.3", features = ["postgres", "uuid"] }
tokio = { version = "1.43", features = ["full"] }
