[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
clam-core = { path = "../core" }
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
deadpool-postgres = { version = "0.14" }
tokio-postgres = { version = "0.7", features = ["with-uuid-1"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1"
uuid = { version = "1", features = ["v4", "serde"] }
